--- a/package.json
+++ b/package.json
@@ -1,29 +1,13 @@
 {
-  "name": "homie-js",
-  "version": "1.0.0",
-  "description": "",
-  "source": "src/index.ts",
-  "main": "dist/main.js",
-  "module": "dist/module.js",
-  "types": "dist/types.d.ts",
+  "name": "homiejs-project",
+  "version": "0.0.0",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "engines": {
-    "node": ">= 18"
+    "node": ">=18",
+    "pnpm": "9.7.0"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "scripts": {
-    "watch": "parcel watch",
-    "build": "parcel build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@parcel/packager-ts": "2.12.0",
-    "@parcel/transformer-typescript-types": "2.12.0",
-    "parcel": "^2.12.0",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "u8-mqtt": "^0.6.6"
-  }
+  "packageManager": "pnpm@9.7.0"
 }
