--- a/packages/homie-devices/package.json
+++ b/packages/homie-devices/package.json
@@ -22,7 +22,8 @@
     "@parcel/transformer-typescript-types": "2.12.0",
     "parcel": "^2.12.0",
     "typescript": "^5.6.3",
-    "homie-spec": "workspace:*"
+    "homie-spec": "workspace:*",
+    "u8-mqtt-types": "workspace:*"
   },
   "dependencies": {
     "u8-mqtt": "^0.6.6"
