--- a/packages/homie-devices/package.json
+++ b/packages/homie-devices/package.json
@@ -2,6 +2,7 @@
   "name": "homie-devices",
   "version": "0.0.0",
   "description": "",
+  "type": "module",
   "source": "src/index.ts",
   "main": "dist/main.js",
   "module": "dist/module.js",
@@ -20,12 +21,14 @@
   "devDependencies": {
     "@parcel/packager-ts": "2.12.0",
     "@parcel/transformer-typescript-types": "2.12.0",
-    "parcel": "^2.12.0",
-    "typescript": "^5.6.3",
     "homie-spec": "workspace:*",
+    "parcel": "^2.12.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
     "u8-mqtt-types": "workspace:*"
   },
   "dependencies": {
-    "u8-mqtt": "^0.6.6"
+    "immer": "^10.1.1",
+    "zod": "^3.23.8"
   }
 }
