--- a/packages/homie-spec/package.json
+++ b/packages/homie-spec/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homie-spec",
+  "name": "@nstadigs/homie-spec",
   "version": "5.0.0",
   "description": "Typescript definitions for the Homie MQTT convention",
   "keywords": [],
