--- a/packages/homie-devices/package.json
+++ b/packages/homie-devices/package.json
@@ -13,7 +13,9 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "watch": "parcel watch",
-    "build": "parcel build"
+    "build": "parcel build",
+    "test": "node --import tsx --test './src/**/*.test.ts'",
+    "watch:test": "node --test --watch --import tsx './src/**/*.test.ts'"
   },
   "keywords": [],
   "author": "Niklas Stadigs",
@@ -23,8 +25,9 @@
     "@nstadigs/u8-mqtt-types": "workspace:*",
     "@parcel/packager-ts": "2.12.0",
     "@parcel/transformer-typescript-types": "2.12.0",
+    "@types/node": "^22.9.0",
     "parcel": "^2.12.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
