--- a/packages/homie-spec/package.json
+++ b/packages/homie-spec/package.json
@@ -3,6 +3,27 @@
   "version": "5.0.0",
   "description": "Typescript definitions for the Homie MQTT convention",
   "keywords": [],
+  "type": "module",
   "author": "Niklas Stadigs",
-  "license": "ISC"
+  "license": "ISC",
+  "source": "src/index.ts",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
+  "types": "dist/types.d.ts",
+  "scripts": {
+    "watch": "parcel watch",
+    "build": "parcel build",
+    "test": "node --import tsx --test './test/**/*.test.ts'",
+    "watch:test": "node --test --watch --import tsx './test/**/*.test.ts'"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
+    "jest": "^29.7.0",
+    "parcel": "^2.12.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "yaml": "^2.6.0",
+    "@parcel/transformer-typescript-types": "2.12.0"
+  }
 }
