Ignore vendor stuff in fmt/lint/test

--- a/deno.json
+++ b/deno.json
@@ -3,5 +3,14 @@
     "./packages/homie-spec",
     "./packages/homie-devices",
     "./packages/homie-client"
-  ]
+  ],
+  "fmt": {
+    "exclude": ["**/vendor/"]
+  },
+  "lint": {
+    "ignore": ["**/vendor/"]
+  },
+  "test": {
+    "exclude": ["**/vendor/"]
+  }
 }
