--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,7 @@
     "exclude": ["**/vendor/"]
   },
   "lint": {
-    "ignore": ["**/vendor/"]
+    "exclude": ["**/vendor/"]
   },
   "test": {
     "exclude": ["**/vendor/"]
