--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -9,10 +9,10 @@
 name: Deno
 
 on:
-# push:
-#   branches: ["main"]
-# pull_request:
-#   branches: ["main"]
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 permissions:
   contents: read
