Add homie-lgtv vendor stuff

--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,8 @@
   "workspace": [
     "./packages/homie-spec",
     "./packages/homie-devices",
-    "./packages/homie-client"
+    "./packages/homie-client",
+    "./packages/homie-lgtv"
   ],
   "fmt": {
     "exclude": ["**/vendor/"]
