Create common instance object for types

--- a/deno.json
+++ b/deno.json
@@ -10,5 +10,9 @@
   },
   "test": {
     "exclude": ["**/vendor/"]
+  },
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
