--- a/packages/react-homie-devices/deno.json
+++ b/packages/react-homie-devices/deno.json
@@ -12,6 +12,7 @@
     "@types/react-reconciler": "npm:@types/react-reconciler@^0.28.8",
     "homie-spec": "jsr:@nstadigs/homie-spec",
     "react": "npm:react@^18.3.1",
-    "react-reconciler": "npm:react-reconciler@^0.29.2"
+    "react-reconciler": "npm:react-reconciler@^0.29.2",
+    "fnv1a": "npm:@sindresorhus/fnv1a"
   }
 }
