Switch back to mutation mode
After playing around with mutation mode again I actually think this
works better for our use case. The order of events matches the spec
perfectly.

--- a/packages/react-homie-devices/deno.json
+++ b/packages/react-homie-devices/deno.json
@@ -5,14 +5,29 @@
     ".": "./src/mod.ts",
     "./jsx-runtime": "./src/jsx-runtime.ts"
   },
-
   "imports": {
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
+    "@std/assert": "jsr:@std/assert@^1.0.8",
+    "@std/testing": "jsr:@std/testing@^1.0.5",
     "@types/react": "npm:@types/react@^18.3.12",
     "@types/react-reconciler": "npm:@types/react-reconciler@^0.28.8",
     "homie-spec": "jsr:@nstadigs/homie-spec",
     "react": "npm:react@^18.3.1",
     "react-reconciler": "npm:react-reconciler@^0.29.2",
     "fnv1a": "npm:@sindresorhus/fnv1a"
+  },
+  "tasks": {
+    "watch:test": {
+      "description": "Watch for changes and run tests",
+      "command": "deno test --watch --allow-read"
+    },
+    "test": {
+      "description": "Run tests",
+      "command": "deno test --allow-read"
+    },
+    "update:snapshots": {
+      "description": "Update test snapshots",
+      "command": "deno test --allow-read --allow-write -- --update"
+    }
   }
 }
